feat: list runnables via attributed analysis, fix JDK 21+ main detection
Wires RunnableScanner into an LSP command (lathe.runnables.list), and along
the way corrects a design mistake from the slice that introduced the scanner:
it started from a bare, unattributed parse (mirroring documentSymbol/
foldingRange) to avoid what looked like the cost of full attribution, with a
syntactic best-effort fallback for parameter-type erasure. That premise was
wrong -- SourceAnalysisSession.semanticTokens already shows that attribution
for an open file is normally free (compile-on-open/change/save already
attributes for diagnostics; the cache only needs a refresh, via one compile
call, when content/version don't match).

- SourceAnalysisSession: extracted the cache-or-recompile check out of
  semanticTokens into a shared attributedAnalysis(uri, content,
  expectedVersion) helper, now used by both semanticTokens and the new
  runnables(uri, content, expectedVersion, moduleRel).
- RunnableScanner rewritten to resolve each declaration's real Element via
  trees.getElement(getCurrentPath()). Parameter-type erasure now uses
  types.erasure(param.asType()) -- exactly ReferenceTarget.buildDescriptor's
  approach -- so it's correct in every case, not just the common ones.
  Binary names use elements.getBinaryName() instead of hand-rolled "$"
  joining, matching CallHierarchyItemDataCodec's existing pattern. This
  deleted the import-table map, the hardcoded java.lang simple-name set, and
  the null-propagating "omit the signature" fallback entirely -- net
  simpler code, not a complexity-for-correctness tradeoff.
- isMainMethod no longer requires public/static: JDK 21+'s relaxed launch
  protocol (JEP 512, finalized in JDK 25) accepts a bare instance
  `void main()`, with either zero parameters or a single String[].
- Propagated the document version needed for cache-freshness checking
  through CompilationWorker.runnables and WorkspaceSession.runnablesFuture
  (mirrors semanticTokensFutur